--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #fbfbfb;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
 h1 {
@@ -180,9 +180,16 @@ h1 {
 }
 
 .button-azure {
-  background: #2980B9;
+  background: #2980b9;
 }
 
 .button-github {
   background: #393939;
+}
+
+.header {
+  margin: 20px auto;
+  width: 100%;
+  text-align: center;
+  font-size: 6rem;
 }
